--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,25 @@
         }
     ],
     "license": "proprietary",
+    "require": {
+        "illuminate/auth": "^5.7|^5.8"
+    },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
     },
+    "autoload": {
+        "psr-4": {
+            "IAMProperty\\MultiAuth\\": "src"
+        }
+    },
     "config": {
         "sort-packages": true
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "IAMProperty\\MultiAuth\\MultiAuthServiceProvider"
+            ]
+        }
     }
 }
