--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "license": "proprietary",
     "require": {
-        "illuminate/auth": "^5.7|^5.8"
+        "illuminate/auth": "^5.6|^5.7|^5.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
