--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
     ],
     "license": "proprietary",
     "require": {
-        "illuminate/auth": "^5.6|^5.7|^5.8|^6.0"
+        "illuminate/auth": "^5.6|^5.7|^5.8|^6.0|^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "psr-4": {
